fixed spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 300px;
 
     background-image: url('../../../public/images/Maldevera_logo-BONE_TEXTURE.png');
 
