--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -12,5 +12,6 @@
     font-size: 30px;
     font-weight: bold;
 
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
