--- a/src/components/SocialMediaBar/SocialMediaBar.css
+++ b/src/components/SocialMediaBar/SocialMediaBar.css
@@ -15,7 +15,7 @@
     width: 50px;
     border-radius: 40px;
     object-fit: cover;
-    padding: 5px;
+    padding: 10px;
 }
 
 .social-media-icon:hover {
